--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
         <p>Grounded</p>
       </div>
 
+      <div class="game" onclick="showInfo('Grounded 2')">
+        <img src="https://upload.wikimedia.org/wikipedia/en/4/43/Grounded_2_cover.jpg" alt="Grounded">
+        <p>Grounded 2</p>
+      </div>
+
       <div class="game" onclick="showInfo('Stray')">
         <img src="https://image.api.playstation.com/vulcan/ap/rnd/202206/0300/E2vZwVaDJbhLZpJo7Q10IyYo.png" alt="Stray">
         <p>Stray</p>
