--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🎮 Jogos 🎮</title>
+  <title>🎮 unknown-game 🎮</title>
   <link rel="stylesheet" href="styles.css" />
   </head>
 
   <section id="jogosSection">
-    <h1>🎮 Jogos 🎮</h1>
+    <h1>🎮 Pesquisar 🎮</h1>
     <input type="text" id="searchInput" placeholder="Digite o nome do jogo..." onkeyup="filterGames()">
     
 
