--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
 
       <div class="game" onclick="showInfo('Grounded 2')">
-        <img src="https://upload.wikimedia.org/wikipedia/en/4/43/Grounded_2_cover.jpg" alt="Grounded">
+        <img src="https://upload.wikimedia.org/wikipedia/en/4/43/Grounded_2_cover.jpg" alt="Grounded 2">
         <p>Grounded 2</p>
       </div>
 
